load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bus.go",
        "event.go",
    ],
    importpath = "github.com/erinpentecost/deterbus/deterbus",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["deterbus_test.go"],
    embed = [":go_default_library"],
)
