load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bus.go",
        "event.go",
        "reflectutil.go",
    ],
    importpath = "github.com/erinpentecost/deterbus/deterbus",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/eapache/queue:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["deterbus_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
